<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_client_illumination</name>
  <version>1.1.0</version>
  <description>
      The illumination client allows control of the illumination service within the ROS/IOP Bridge.
  </description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_ugv_clients</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_msgs</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_ocu_slavelib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>
  
</package>
